# modul-8

./: pyproject.toml
RabitMQ/: consumer.py  models.py  producer.py
RabitMQ/connect_to_db/: config.ini  connect.py
mongo_db/: find_quots.py  seed.py
