[tool.poetry]
name = "modul-8-mongo"
version = "0.1.0"
description = ""
authors = ["Invil124 <113246425+Invil124@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_8_mongo"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras=["srv","tls"], version = "^4.3.3"}
mongoengine = "^0.25.0"
faker = "^16.6.0"
pika = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
